--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -16,3 +16,8 @@
 - Transcription typo?: "In su maleol un crac e il senti que il ne
   posse escapar".
 - Add all accents.
+- Consult "inconsens": ín-con-sens, non-con-sens.
+- Update "musculos" -> "musculosi"?
+- Update "defectos" -> "defectosi"?
+- "filú"?
+- "dormí".
