--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.19+20190415
+:revnumber: 0.1.0-dev.20+20190415
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -20,7 +20,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201904151912
+// Last modified 201904152231
 
 :dot: .
 
@@ -43,6 +43,12 @@ http://ie-munde.com[ie-munde.com].
 Conversion a Asciidoctor, revision, e edition quam libre digital:: Marcos Cruz,
 2019{dot} Obtenibil in http://ne.alinome.net[ne.alinome.net] ye formates EPUB,
 PDF e altris.
+
+Changes in ti edition::
+
+- Omni errores trovat ha esset corectet.
+- Por facilisar li letion al nov aprensores del lingue, omni accentus
+  ha esset mettet.
 
 Libre digital fat solmen per líber programas:: 
 http://asciidoctor.org[Asciidoctor],
