--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.20+20190415
+:revnumber: 0.1.0-dev.21+20190501
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -880,7 +880,7 @@ trovat alcun tracie del Slavines. Li responses nequande posset contentar
 le.
 
 Depos ti témpor Ondra esset quelcvez in li subterrania. Ma benque mult
-grottes aparet le conosset. Támen il nequande trovat su Krasina.
+grottes aparet le conosset, támen il nequande trovat su Krasina.
 
 // Posparol del editoria {{{1
 == Posparol del editoria
