--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.24+20190602
+:revnumber: 0.1.0-pre.0+20190802
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -20,7 +20,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201906021315
+// Last modified 201908021539
 
 :dot: .
 
@@ -34,6 +34,7 @@ Subtitul:: Original raconta ex li subterrania de Moravian Carst.
 Autor:: {author}.
 
 Edition original:: Printería de J. A. Kajš, Brno, 1938.
+Anunciat in Cosmoglotta, serie A, numeró 149, 1949-10.
 
 Digitalisation:: Bedŕich Plavec, secun li textu original.
 
