--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,7 +1,7 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.2.0-dev.0+20200223
-:version-label: Version de edition digital:
+:revnumber: 0.2.0-dev.2+20200224
+:version-label: Version del edition digital:
 :lang: ie
 :docinfo: private
 ifdef::backend-pdf[]
@@ -9,6 +9,7 @@ ifdef::backend-pdf[]
 :toc: macro
 :toclevels: 3
 :toc-title: Contenete
+:front-cover-image: ../tmp/book_cover.pdf
 endif::[]
 
 // This file is part of project
@@ -20,7 +21,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201908021604
+// Last modified 202002232018
 
 :dot: .
 
@@ -41,9 +42,12 @@ Digitalisation:: Bedŕich Plavec, secun li textu original.
 Conversion a PDF:: Thomas Schmidt, 2013. Obtenibil in
 http://ie-munde.com[ie-munde.com].
 
-Conversion a Asciidoctor, revision, e edition quam libre digital:: Marcos Cruz,
-2019{dot} Obtenibil in http://ne.alinome.net[ne.alinome.net] ye formates EPUB,
-PDF e altris.
+Conversion a Asciidoctor, revision, e edition quam libre digital::
+Marcos Cruz, 2019, 2020{dot} Obtenibil in
+http://ne.alinome.net[ne.alinome.net] ye formates EPUB, PDF e altris.
+
+Fotogramma del covriment:: Moravian Carst (ex  
+https://czadventures.wordpress.com/top-10[Czech Adventures]).
 
 Changes in ti edition::
 
@@ -56,16 +60,18 @@ Changes in ti edition::
 Libre digital fat solmen per líber programas:: 
 http://asciidoctor.org[Asciidoctor],
 https://github.com/asciidoctor/asciidoctor-pdf[asciidoctor-pdf],
-dbtoepub,
+http://docbook.sourceforge.net/release/xsl/current/epub/README[dbtoepub],
 http://debian.org[Debian],
 http://git-scm.com/[Git],
 https://www.gnu.org/software/make/[GNU make],
-http://pandoc.org[pandoc],
+http://imagemagick.org[ImageMagick],
+https://gitlab.mister-muffin.de/josch/img2pdf[img2pdf],
+http://pandoc.org[Pandoc],
 http://http://jonas.nitro.dk/tig[Tig],
 http://vim.org[Vim],
 http://xmlsoft.org/XSLT/[xsltproc]...
 
-Version de ti edition:: {revnumber}.
+Version de ti edition digital:: {revnumber}.
 
 Contributiones:: Corectiones e suggestiones por sequent versiones es
 benevenit che http://ne.alinome.net[ne.alinome.net].
@@ -324,7 +330,10 @@ Li letura e scritura es che li Slavines ínconosset, almen secun nor usa.
 Solmen in li pictura ili es versat, quam atestat diversi dessines per carbon,
 sur li roccas e gravuras sur ossin e petrin utensiles e vases.
 
-Mill-annual tradition, anxiosmen mantenet, di que lor ancestres esset pastores e cultivatores de vegetales de quel on fa pane. Ili self nequande videt li pane, ma ili crede que li pane es li optim nutriment del hom.
+Mill-annual tradition, anxiosmen mantenet, di que lor ancestres esset
+pastores e cultivatores de vegetales de quel on fa pane. Ili self
+nequande videt li pane, ma ili crede que li pane es li optim nutriment
+del hom.
 
 Ili have anc lor propri religion. Ili crede al Patre sin li comense e fine --
 sin li nascentie e morte -- quel mantene li munde per li foy e aqua, per li
@@ -622,8 +631,6 @@ Secun ti metode Ondra continuat chascun die quelc hores. Bentost il videt
 que ínter li max diligent eleves excelle su Krasina. Li joy del eleves crescet
 chascun die e pos quelc leciones ili posset leer li canzones quel Ondra scrit e
 cantat.
-
-
 
 // Li explorativ via {{{1
 == Li explorativ via
